...
        android:orientation="vertical"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4">

        <RadioButton
            android:id="@+id/RegRadDisnea0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="13sp"
            android:text="No posee sensación" />

        <RadioButton
            android:id="@+id/RegRadDisnea1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="13sp"
            android:text="Ligera fatiga, en actividades fisicas cotidianas" />

        <RadioButton
            android:id="@+id/RegRadDisnea2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="13sp"
...
        android:layout_gravity="center"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4">

        <RadioButton
            android:id="@+id/RegRadbtnSiG"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="13sp"
            android:text="Si" />

        <RadioButton
            android:id="@+id/RegRadbtnNoG"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="13sp"
            android:text="No" />
    </RadioGroup>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="20dp"
...
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:context=".Formularios.FormularioInfoPersonal3">

            <CheckBox
                android:id="@+id/cbDiabetes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Diabetes"
                android:layout_marginLeft="20dp"
                android:textSize="13sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <CheckBox
...
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </LinearLayout>
    </LinearLayout>
    <CheckBox
        android:id="@+id/RegCheckbx"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:text="Acepta las politicas de uso de datos"
        android:textSize="13sp"
        app:layout_constraintTop_toBottomOf="@+id/RegPass" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
...
