...
            android:text="¿Algun miembro de su familia(mamá,papá,tios,abuelos) han tenido enfermedades cardiovasculares?"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/textView10"
            app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <RadioGroup
        android:id="@+id/radioGroup4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
...
            android:text="No"
            android:textColor="@color/black"
            android:textSize="15sp" />
    </RadioGroup>

        <EditText
            android:id="@+id/etApellido"
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/cabin"
            android:textColor="@color/black"
            android:textColorHighlight="#000000"
            android:textColorHint="#000000"
...
            android:layout_marginTop="16dp"
            android:fontFamily="@font/cabin_bold"
            android:text="Apellido"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@+id/textView7"
            app:layout_constraintTop_toBottomOf="@+id/etNombre" />

        <EditText
            android:id="@+id/etFechaEdad"
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/cabin"
            android:gravity="center"
            android:hint="dd/mm/aa"
            android:inputType="number"
...
                    android:fontFamily="@font/cabin_bold"
                    android:text="Mujer"
                    android:textColor="@color/black"
                    android:textSize="15sp" />

                <RadioButton
                    android:id="@+id/RegRadbtnHombre"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/cabin_bold"
                    android:text="Hombre"
                    android:textColor="@color/black"
                    android:textSize="15sp" />
        </RadioGroup>

        <TextView
            android:id="@+id/textView10"
...
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="@+id/textView7"
            app:layout_constraintStart_toEndOf="@+id/textView7"
            app:layout_constraintTop_toTopOf="@+id/textView7"></EditText>

    <ImageButton
        android:id="@+id/btnSiguienteFormul"
        android:layout_width="76dp"
        android:layout_height="76dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="4dp"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
...
