...
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Formularios.FormularioInfoPersonal1">

    <RadioGroup
        android:id="@+id/radioGroup2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="@+id/textView14"
        app:layout_constraintStart_toEndOf="@+id/textView14"
        app:layout_constraintTop_toTopOf="@+id/textView14">

        <RadioButton
            android:id="@+id/RegRadbtnNo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/cabin_bold"
            android:text="No"
            android:textColor="@color/black"
            android:textSize="15sp"
...
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/btnSiguienteFormul1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
...
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="@+id/textView17"
        app:layout_constraintTop_toBottomOf="@+id/textView20" />

    <EditText
        android:id="@+id/cintura"
        android:layout_width="64dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/cabin"
        android:gravity="center"
        android:hint="cm"
        android:inputType="number"
...
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:fontFamily="@font/cabin_bold"
        android:text="Altura:"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintStart_toEndOf="@+id/etPeso"
        app:layout_constraintTop_toTopOf="@+id/textView17" />

    <EditText
        android:id="@+id/cadera"
        android:layout_width="64dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:fontFamily="@font/cabin"
        android:gravity="center"
        android:hint="cm"
...
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textView16"
        app:layout_constraintTop_toBottomOf="@+id/etAñofumador" />

    <EditText
        android:id="@+id/etAltura"
        android:layout_width="64dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/cabin"
        android:gravity="center"
        android:hint="cm"
        android:inputType="number"
...
